# SpiderBot-Quadruped-Walking-Robot

./: README.md
src/spider_robot/: CMakeLists.txt  package.xml
src/spider_robot/config/: hardware_bridge.yaml
src/spider_robot/firmware/spider_robot_esp32/: spider_robot_esp32.ino
src/spider_robot/launch/: hardware.launch.py  moveit_hardware.launch.py  real_robot.launch.py
src/spider_robot/src/: hardware_bridge.py
src/spiderbot/: CMakeLists.txt  package.xml
src/spiderbot/config/: controllers.yaml
src/spiderbot/config/moveit/: joint_limits.yaml  kinematics.yaml  moveit_controllers.yaml  spiderbot.srdf
src/spiderbot/description/: inertial_macros.xacro  robot.urdf.xacro  robot_core.xacro
src/spiderbot/launch/: launch_sim.launch.py  moveit.launch.py  rviz.launch.py
src/spiderbot/rviz/: default.rviz  moveit.rviz
src/spiderbot/src/: control.py  keyboard_teleop.py  manual_control.py  moveit_control.py  moveit_dashboard.py  stabilize.py  walk.py
src/spiderbot/worlds/: spiderbot.world
